TabBar and ViewPager Added

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">MusicPlayer</string>
+    <string name="app_name">Nav Music</string>
 
     <string name="title">Nav Music</string>
     <string name="theme_color">Theme Color</string>
