--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,6 @@
         easily. Custom your color as you feel.
     </string>
     <string name="ok">Ok</string>
+    <string name="start_time">0.00</string>
+    <string name="final_time">0.00</string>
 </resources>
