--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,5 @@
     <string name="ok">Ok</string>
     <string name="start_time">0.00</string>
     <string name="final_time">0.00</string>
+    <string name="search_hint">Song Name</string>
 </resources>
