--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,8 +11,12 @@
     <string name="about_text">Nav Music is an application to play mp3 music on your android device. With simple interface make you enjoy the music
         easily. Custom your color as you feel.
     </string>
-    <string name="ok">Ok</string>
+    <string name="ok">OK</string>
     <string name="start_time">0.00</string>
     <string name="final_time">0.00</string>
     <string name="search_hint">Song Name</string>
+    <string name="no">No</string>
+    <string name="yes">Yes</string>
+    <string name="delete">Delete</string>
+    <string name="delete_text"> Are you sure you want to delete</string>
 </resources>
